--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,26 +1,70 @@
 @import url('./font/index.css');
 
 body {
+  all: unset;
+
+  min-block-size: 100vh;
   margin: 0;
+
+  background-color: var(--page-background);
+
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+  font-family: var(--font-family-body);
+  font-size: var(--font-me);
+  font-weight: var(--font-regular);
+  color: var(--page-text-color);
+
+  background-color: var(--page-background);
 }
 
+/* stylelint-disable-next-line no-duplicate-selectors */
 :root {
   /* Base Colours */
-  --page-background: #161116ff;
   --secondary-background-color: #312631ff;
   --foreground-background-color: #453345ff;
   --secondary-foreground-background-color: #6f5c6fff;
   --cta-accept-color: #236147ff;
-  --navbar-color: #161116ff;
-  --navbar-hover-color: #251e25;
-  --navbar-focus-color: #3a333a;
+
+  /* ---- COLOUR PALETTE ---- */
+  --light-orange: #ff8c7c;
+  --orange: #ff8c7c;
+  --dark-orange: #af584d;
+
+  /* Greyscale */
+  --white: #fff;
+  --dark-white: #eee;
+  --light-grey: #aaa;
+  --grey: #999;
+  --dark-grey: #555;
+  --light-black: #333;
+  --black: #000;
+
+  /* ---- LOGICAL PALETTE ---- */
+
+  /* Page */
+  --page-background: #161116;
+
+  /* Navbar */
+  --nav-bg: #312631;
+  --nav-item-hover-bg: #251e25;
+  --nav-item-active-bg: #604b60;
+  --nav-item-bg: #453345;
+  --nav-text: var(--dark-white);
+  --nav-text-active: var(--white);
+  --nav-text-hover: var(--orange);
+  --nav-footer-text: var(--dark-white);
+
+  /* Card */
+  --card-bg: #312631;
+  --card-hover-bg: #453345;
+
+  /* Loader */
+  --loader-outer-bg: var(--grey);
+  --loader-inner-bg: var(--white);
 
   /* Shadow Colours */
   --foreground-shadow: #16111688;
@@ -29,7 +73,7 @@ code {
   --main-text: #fff;
   --secondary-text: #ddd;
   --placeholder-text: #ccc;
-  --links-text: #ff8c7c;
+  --link-text: #ff8c7c;
 
   /* Tags */
   --generic-tag: #576163;
@@ -39,10 +83,14 @@ code {
   --focus-highlight: #ff8c7c;
   --unfocused-highlights: #ff8c7c00;
 
+  /* Shadows */
+  --card-shadow: 0 2px 6px rgba(0 0 0 / 10%);
+
   /* Border-Radius */
   --radius-small: 3px;
   --radius-medium: 5px;
   --radius-large: 8px;
+  --radius-circle: 50%;
 
   /* Font Sizes */
   --font-xs: 0.6rem;
@@ -67,19 +115,17 @@ code {
   --breakpoint-xl: 1200px;
 }
 
-body {
-  all: unset;
-
-  font-family: var(--font-family-body);
-  font-size: var(--font-me);
-  font-weight: var(--font-regular);
-  color: var(--page-text-color);
-
-  background-color: var(--page-background);
-  min-block-size: 100vh;
-}
 
 :is(h1, h2, h3, h4, h5, h6) {
   font-family: var(--font-family-headings);
-  color: var(--main-text);
+  color: var(--white);
+}
+
+:is(p) {
+  color: var(--dark-white);
+}
+
+:is(a) {
+  color: var(--link-text);
+  text-decoration: none;
 }
