--- a/src/common/Navigation/navigation.module.css
+++ b/src/common/Navigation/navigation.module.css
@@ -1,19 +1,41 @@
 .navigationSidebar {
+  position: fixed;
+  z-index: var(--index-nav);
+
   display: grid;
   grid-area: Navigation;
-  grid-template-rows: auto 1fr auto auto;
+  grid-template-areas: 'brand'
+    'nav'
+    'footer'
+    'account'
+    'bottomPadding';
+  grid-template-rows: auto 1fr auto;
 
   align-content: center;
 
-  inline-size: 15rem;
-  min-block-size: 100%;
+  inline-size: 17rem;
+  block-size: 100vh;
 
   background-color: var(--nav-bg);
 
+  @media screen and (max-width: 65rem) {
+    display: none;
+    
+    &.navVisible {
+      display: grid;
+
+      inline-size: 100vw
+    }
+  }
+
+  
   nav {
     display: flex;
     flex-direction: column;
+    grid-area: nav;
     gap: 1em;
+
+    overflow-y: scroll;
   }
 
   ul {
@@ -26,14 +48,18 @@
   }
 
   footer {
-    grid-row: 4;
+    grid-area: footer;
 
-    max-inline-size: 100%;
     padding: 0.5em;
 
     font-size: var(--font-sm);
     color: var(--nav-footer-text);
     text-align: center;
+
+    p {
+      margin-block-start: 0;
+      margin-block-end: 2px;
+    }
   }
 }
 
@@ -58,9 +84,50 @@
     }
 
     &.active {
+      font-weight: var(--font-bold);
       color: var(--nav-text-active);
 
       background-color: var(--nav-item-active-bg);
     }
+  }
+}
+
+.account {
+  display: grid;
+  grid-area: account;
+  grid-template-areas: 
+    'image username'
+    'image signout';
+  grid-template-columns: 3rem;
+  gap: 0.5rem;
+
+  align-items: center;
+
+  block-size: 3rem;
+  padding: 1rem;
+
+  font-size: var(--font-me);
+  font-weight: var(--font-bold);
+  color: var(--nav-text);
+
+  background-color: var(--nav-item-bg);
+
+  & span {
+    margin-block-end: 3px;
+  }
+
+  & img {
+    grid-area: image;
+
+    block-size: 3rem;
+
+    border-radius: var(--radius-circle);
+  }
+}
+
+.bottomPadding {
+  grid-area: bottomPadding;
+  @media screen and (max-width: 65rem) {
+    block-size: 3.1rem;
   }
 }
