--- a/src/components/Brand/brand.module.css
+++ b/src/components/Brand/brand.module.css
@@ -1,5 +1,6 @@
 .brand {
   display: flex;
+  grid-area: brand;
 
   align-items: center;
   justify-content: center;
@@ -7,11 +8,11 @@
   margin: 0.8em 0 1em;
 
   h1 {
-    font-size: var(--font-lg);
+    font-size: var(--font-xl);
   }
 
   img {
-    block-size: 2em;
+    block-size: 2.3rem;
     margin-inline-start: -4px;
     margin-inline-end: 4px;
   }
