--- a/src/components/Judges/judges.module.css
+++ b/src/components/Judges/judges.module.css
@@ -1,27 +1,12 @@
 .judgesList {
-  display: grid;
-  grid-template-columns: 1fr auto 1fr;
-
-  place-items: center;
-
-  inline-size: 100%;
-
-  h2 {
-    grid-row: 1;
-    grid-column: 2;
-  }
+  max-inline-size: 1000px;
 
   ul {
-    display: flex;
-    flex-flow: row wrap;
-    grid-row: 2;
-    grid-column: 2;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 10rem);
     gap: 15px;
-
-    justify-content: center;
 
     padding: 0;
     margin: 0;
-    max-inline-size: 1000px;
   }
 }
