--- a/src/layout/Page/page.module.css
+++ b/src/layout/Page/page.module.css
@@ -1,8 +1,11 @@
 .page {
   display: grid;
-  grid-template-columns: 1fr min(90%, 100ch) 1fr;
-  
+  grid-area: Content;
+  grid-template-columns: 1fr min(95%, 1100px) 1fr;
+
   > main {
     grid-column: 2;
   }
+
+  padding-block-end: 4rem;
 }
