--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,26 +1,5 @@
 @import url('./font/index.css');
 
-body {
-  all: unset;
-
-  min-block-size: 100vh;
-  margin: 0;
-
-  background-color: var(--page-background);
-
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-:root {
-  font-family: var(--font-family-body);
-  font-size: var(--font-me);
-  font-weight: var(--font-regular);
-  color: var(--page-text-color);
-
-  background-color: var(--page-background);
-}
-
 /* stylelint-disable-next-line no-duplicate-selectors */
 :root {
   /* Base Colours */
@@ -50,17 +29,23 @@ body {
 
   /* Navbar */
   --nav-bg: #312631;
-  --nav-item-hover-bg: #251e25;
+  --nav-button-bg: #604b60;
+  --nav-item-hover-bg: #604b60;
   --nav-item-active-bg: #604b60;
   --nav-item-bg: #453345;
   --nav-text: var(--dark-white);
   --nav-text-active: var(--white);
-  --nav-text-hover: var(--orange);
+  --nav-text-hover: var(--white);
   --nav-footer-text: var(--dark-white);
 
   /* Card */
   --card-bg: #312631;
   --card-hover-bg: #453345;
+  --card-selected-bg: #453345;
+
+  /* Dialog */
+  --dialog-bg: #312631;
+  --dialog-border: none;
 
   /* Loader */
   --loader-outer-bg: var(--grey);
@@ -86,26 +71,31 @@ body {
   /* Shadows */
   --card-shadow: 0 2px 6px rgba(0 0 0 / 10%);
 
+  /* Vote button */
+  --vote-btn-border: var(--grey);
+  --vote-btn-bkg: transparrent;
+  --vote-btn-selected-border: var(--orange);
+  --vote-btn-selected-bkg: var(--orange);
+
+  /* Inputs */
+  --input-background: #453345;
+  --input-text-color: #fff;
+  --input-border: 0 solid #d2d5d9;
+  --input-invalid-border: 1px solid #d5524c;
+
+  /* Button */
+  --button-primary-bg: #16a085;
+  --button-primary-hover-bg: #068d75;
+  --button-disabled-bg: #6a6c70;
+
+
+  /* ---- UTILITY VARIABLES ---- */
+
   /* Border-Radius */
   --radius-small: 3px;
   --radius-medium: 5px;
   --radius-large: 8px;
   --radius-circle: 50%;
-
-  /* Font Sizes */
-  --font-xs: 0.6rem;
-  --font-sm: 0.8rem;
-  --font-me: 1rem;
-  --font-lg: 1.2rem;
-  --font-xl: 1.4rem;
-  --font-xxl: 1.8rem;
-
-  /* Font Weights */
-  --light: 300;
-  --regular: 400;
-  --semi-bold: 600;
-  --bold: 700;
-  --extra-bold: 800;
 
   /* Standard Breakpoints */
   --breakpoint-xs: 0;
@@ -113,8 +103,30 @@ body {
   --breakpoint-md: 768px;
   --breakpoint-lg: 992px;
   --breakpoint-xl: 1200px;
+
+  /* z-indexes */
+  --index-top: 10000;
+  --index-nav: 9000;
+
+  font-family: var(--font-family-body);
+  font-size: var(--font-me);
+  font-weight: var(--font-regular);
+  color: var(--page-text-color);
+
+  background-color: var(--page-background);
 }
 
+body {
+  all: unset;
+
+  min-block-size: 100vh;
+  margin: 0;
+
+  background-color: var(--page-background);
+
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
 
 :is(h1, h2, h3, h4, h5, h6) {
   font-family: var(--font-family-headings);
@@ -128,4 +140,18 @@ body {
 :is(a) {
   color: var(--link-text);
   text-decoration: none;
+}
+
+h2 {
+  margin-block-end: 1rem;
+
+  font-size: var(--font-heading);
+}
+
+h3 {
+  font-size: var(--font-subheading);
+}
+
+h4 {
+  font-size: var(--font-lg);
 }
