--- a/src/components/Button/button.module.css
+++ b/src/components/Button/button.module.css
@@ -2,10 +2,23 @@
   padding: 13px 22px;
 
   color: var(--input-text-color);
-
+  
   background-color: var(--button-primary-bg);
   border: var(--input-border);
   border-radius: var(--radius-medium);
+  
+  &:is(a) {
+    display: grid;
+
+    align-content: center;
+    justify-content: center;
+
+    padding: 0;
+
+    & span {
+      color: var(--input-text-color);
+    }
+  }
 
   &:hover {
     background-color: var(--button-primary-hover-bg);
@@ -14,4 +27,5 @@
   &:disabled {
     background-color: var(--button-disabled-bg);
   }
+
 }
