--- a/src/components/Media/media.module.css
+++ b/src/components/Media/media.module.css
@@ -1,4 +1,7 @@
 .video {
+  /* stylelint-disable-next-line scale-unlimited/declaration-strict-value */
+  z-index: 20;
+
   inline-size: 100%;
   aspect-ratio: 16 / 9;
 
