--- a/src/components/Nominee/nominee.module.css
+++ b/src/components/Nominee/nominee.module.css
@@ -11,7 +11,7 @@
 
   justify-items: center;
 
-  padding: 5px;
+  padding: 0;
 
   background-color: var(--card-bg);
   border-radius: var(--radius-medium);
@@ -23,7 +23,7 @@
 
     inline-size: 100%;
 
-    border-radius: var(--radius-medium);
+    border-radius: var(--radius-medium-top);
   }
 
   & iframe, &video {
@@ -33,7 +33,7 @@
   & h4 {
     grid-area: title;
 
-    margin: 0;
+    margin: 0 5px;
   }
 
   & .vote {
