Better indicate voting status - Surface errors to user - Show loading indicator - Let user know when vote has been registered - Let user know when they're changing a vote

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -88,6 +88,11 @@
   --button-primary-hover-bg: #068d75;
   --button-disabled-bg: #6a6c70;
 
+  /* Error */
+  --error-background-color: #493030;
+  --error-border: 2px solid rgb(186 43 43);
+  --error-text-color: #fff;
+
 
   /* ---- UTILITY VARIABLES ---- */
 
