--- a/src/components/Navigation/navigation.module.css
+++ b/src/components/Navigation/navigation.module.css
@@ -4,7 +4,8 @@
 
   display: grid;
   grid-area: Navigation;
-  grid-template-areas: 'brand'
+  grid-template-areas:
+    'brand'
     'nav'
     'footer'
     'account'
@@ -20,15 +21,14 @@
 
   @media screen and (max-width: 65rem) {
     display: none;
-    
+
     &.navVisible {
       display: grid;
 
-      inline-size: 100vw
+      inline-size: 100vw;
     }
   }
 
-  
   nav {
     display: flex;
     flex-direction: column;
@@ -66,21 +66,21 @@
 .navigationItem {
   padding: 0;
   margin: 0;
-  
+
   & > a {
     display: block;
-  
+
     padding: 1em;
 
     color: var(--nav-text);
 
     background-color: var(--nav-item-bg);
     border-radius: var(--radius-small);
-  
+
     &:hover {
       color: var(--nav-text-hover);
 
-      background-color: var(--nav-item-hover-bg)
+      background-color: var(--nav-item-hover-bg);
     }
 
     &.active {
