--- a/src/components/Subcategory/subcategory.module.css
+++ b/src/components/Subcategory/subcategory.module.css
@@ -3,8 +3,10 @@
     gap: 1rem;
 
     & h3 {
-        margin: 0.5rem 0 0.2rem;
+        margin: 1.5rem 0 0.2rem;
     }
+
+    margin-block-end: 3.5rem;
 }
 
 .nominees {
